--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,322 +11,13 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
   <link rel='icon' type='image/png' sizes='16x16' href='/static/icon/menu.png'>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/cover/">
-  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial"
-    rel="stylesheet" />
-    <link href="/static/css/logmain.css" rel="stylesheet" />
-    <link href="/static/css/logutil.css" rel="stylesheet" />
-    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial"rel="stylesheet" />
+  <link href="/static/css/logmain.css" rel="stylesheet" />
+  <link href="/static/css/logutil.css" rel="stylesheet" />
+  <link href="/static/css/default.css" rel="stylesheet" />
+  <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
   <title>R.I.P</title>
-
-  <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
-  <meta name="theme-color" content="#563d7c">
-
-
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-
-    body {
-      
-      /* background-image: url("/static/icon/배경사진.png"); */
-      /* background-size: cover; */
-      /* background-repeat: no-repeat; */
-      background-color: #ffffff;
-    }::-webkit-scrollbar{width: 16px;}::-webkit-scrollbar-track{background-color: #7F888F;}::-webkit-scrollbar-thumb{background-color: #f56a6a;border-radius: 5px;}
-
-    @font-face {
-      font-family:'Nanum Pen Script';
-      font-weight: 400;
-      src: url('/static/font/NanumPen.ttf');
-
-    }
-
-    @font-face {
-      font-family: 'Cookie';
-      src: url('/static/font/CookieRun Regular.ttf')
-    }
-
-    .inner {
-      padding: 0 6em 0.1em 6em;
-      margin: 0 auto;
-      max-width: 110em;
-    }
-
-    #header {
-
-      border-bottom: solid 5px #f56a6a;
-
-      position: relative;
-
-    }
-
-    #header .logo {
-      border-bottom: 0;
-      color: inherit;
-      font-family: "Roboto Slab", serif;
-      font-size: 1.125em;
-    }
-
-    .btn-default {
-      color: #fff;
-      background-color: #fff;
-      border-color: #ffffff
-    }
-
-    .btn-default:hover {
-      color: #fff;
-      background-color: #ffffff;
-      border-color: #f56a6a
-    }
-
-    .btn-default.focus,
-    .btn-default:focus {
-      box-shadow: 0 0 0 .2rem #f56a6a
-    }
-
-    .btn-default.disabled,
-    .btn-default:disabled {
-      color: #fff;
-      background-color: #f56a6a;
-      border-color: #f56a6a
-    }
-
-    .btn-default:not(:disabled):not(.disabled).active,
-    .btn-default:not(:disabled):not(.disabled):active,
-    .show>.btn-default.dropdown-toggle {
-      color: #fff;
-      background-color: #f56a6a;
-      border-color: #f56a6a
-    }
-
-    .btn-default:not(:disabled):not(.disabled).active:focus,
-    .btn-default:not(:disabled):not(.disabled):active:focus,
-    .show>.btn-default.dropdown-toggle:focus {
-      box-shadow: 0 0 0 .2rem #f56a6a
-    }
-
-    .btn-input {
-      color: #fff;
-      background-color: #fff;
-      border-color: #ffffff
-    }
-
-    .btn-input:hover {
-      color: #fff;
-      background-color: #ffffff;
-      border-color: #f56a6a
-    }
-
-    .btn-input.focus,
-    .btn-input:focus {
-      box-shadow: 0 0 0 .2rem #f56a6a
-    }
-
-    .btn-input.disabled,
-    .btn-input:disabled {
-      color: #fff;
-      background-color: #f56a6a;
-      border-color: #f56a6a
-    }
-
-    .btn-input:not(:disabled):not(.disabled).active,
-    .btn-input:not(:disabled):not(.disabled):active,
-    .show>.btn-input.dropdown-toggle {
-      color: #fff;
-      background-color: #f56a6a;
-      border-color: #f56a6a
-    }
-
-    .btn-input:not(:disabled):not(.disabled).active:focus,
-    .btn-input:not(:disabled):not(.disabled):active:focus,
-    .show>.btn-input.dropdown-toggle:focus {
-      box-shadow: 0 0 0 .2rem #f56a6a
-    }
-
-    .btn-white {
-      color: #fff;
-      background-color: #fff;
-      border-color: #ffffff
-    }
-
-    .btn-white:hover {
-      color: #fff;
-      background-color: #ffffff;
-      border-color: #ffffff
-    }
-
-    .btn-white.focus,
-    .btn-white:focus {
-      box-shadow: 0 0 0 .2rem #ffffff
-    }
-
-    .btn-white.disabled,
-    .btn-white:disabled {
-      color: #fff;
-      background-color: #ffffff;
-      border-color: #ffffff
-    }
-
-    .btn-white:not(:disabled):not(.disabled).active,
-    .btn-white:not(:disabled):not(.disabled):active,
-    .show>.btn-white.dropdown-toggle {
-      color: #fff;
-      background-color: #ffffff;
-      border-color: #ffffff
-    }
-
-    .btn-white:not(:disabled):not(.disabled).active:focus,
-    .btn-white:not(:disabled):not(.disabled):active:focus,
-    .show>.btn-white.dropdown-toggle:focus {
-      box-shadow: 0 0 0 .2rem #ffffff
-    }
-
-    .underline {
-      color: #7F888F
-    }
-
-    .underline:hover {
-      
-      text-decoration: underline;
-      text-underline-position: top,under;
-      font-weight: bold;
-      color: #f56a6a;
-      
-      
-    }
-
-    .mytable {
-      border-collapse: collapse;
-    }
-
-    .mytable table,
-    .mytable th,
-    .mytable tr,
-    .mytable td {
-      border: 2px solid #f56a6a;
-    }
-
-    select {
-
-      background: url('/static/icon/down-arrow.png') no-repeat 95% 50%;
-      width: 300px;
-      padding: .8em .5em;
-      border: 2px solid #f56a6a;
-      font-family: comic sans ms;
-      border-radius: 0px;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-    }
-
-    .checks {
-      position: relative;
-    }
-
-    .agree .all_agree input[type="checkbox"] {
-      /* 실제 체크박스는 화면에서 숨김 */
-      display: none;
-    }
-
-    .agree .all_agree input[type="checkbox"]+label {
-      display: inline-block;
-      position: relative;
-      cursor: pointer;
-      /* background: #f56a6a; */
-      border-radius: 6px;
-      margin-right:20px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    .agree .all_agree input[type="checkbox"]:checked+label span{
-      background: url('/static/icon/checked.png') no-repeat center;
-      width:32px;
-      height: 32px;
-      
-    }
-
-
-    .agree {
-      /* position: relative; */
-    }
-
-    .agree .all_agree input[type="checkbox"] + label span {
-      position: absolute;
-      /* background: #f56a6a; */
-      background: url('/static/icon/cancel.png') no-repeat center;
-      top: 5px;
-      left: 150px;
-      width:32px;height: 32px;
-      display: url('/static/icon/cancel.png');
-      /* font-weight: bold; */
-    }
-
-    .checks input[type="checkbox"]+label:active:before,
-    .checks input[type="checkbox"]:checked+label:active:before {
-      box-shadow: 0 1px 2px #000000, inset 0px 1px 3px #000000;
-    }
-
-    .chkall input[type="checkbox"] {
-      /* 실제 체크박스는 화면에서 숨김 */
-      display: none;
-    }
-
-    .chkall input[type="checkbox"]+label {
-      display: inline-block;
-      position: relative;
-      cursor: pointer;
-      /* background: #f56a6a; */
-      border-radius: 6px;
-      margin-right:20px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    .chkall input[type="checkbox"]:checked+label span{
-      background: url('/static/icon/checked.png') no-repeat center;
-      width:32px;
-      height: 32px;
-      
-    }
-
-
-    .chkall {
-      /* position: relative; */
-    }
-
-    .chkall input[type="checkbox"] + label span {
-      position: absolute;
-      /* background: #f56a6a; */
-      background: url('/static/icon/cancel.png') no-repeat center;
-      top: 0px;
-      left: 100px;
-      width:32px;height: 32px;
-      display: url('/static/icon/cancel.png');
-      /* font-weight: bold; */
-    }
-
-    
-  </style>
-
-
+  <meta name="theme-color" content="#f56a6a">
 </head>
 
 <body>
