--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -1,9 +1,6 @@
 <!doctype html>
 {% extends 'rest/base.html' %}
 {% block content %}
-
-
-
 <table style='width:100%;'>
 
   <td style="vertical-align: top;">
@@ -11,7 +8,7 @@
       <dv class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
           <div class="inner">
-            
+
             <font size='7' color="#3D4449" face='comic sans ms'>Restaurant In Program</font>
           </div>
         </header>
@@ -26,14 +23,16 @@
                 style='font-family: Cookie;font-size:x-large;color:#3D4449;width:100px;margin-left: 50px;'
                 onclick="location.href='/rest/board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000'">리스트</button>
               <a class='btn btn-white'
-                style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'>- 부산대 주변 모든 음식점을 보실 수
+                style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'>- 부산대 주변 모든 음식점을 보실
+                수
                 있습니다.</a>
               <div style='margin-top:20px'></div>
               <button class='btn btn-default'
                 style='font-family: Cookie;font-size:x-large;color:#3D4449;width:100px;margin-left: 50px;'
                 onclick="location.href='/rest/search'">필터링</button>
               <button class='btn btn-white'
-                style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'>- 식당 카테고리와 거리를 선택할 수
+                style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'>- 식당 카테고리와 거리를 선택할
+                수
                 있습니다.</button>
 
             </div>
@@ -73,11 +72,10 @@
         </div>
         </footer>
     </div>
-    </div>
+
   </td>
 
 </table>
+
 </body>
 {% endblock %}
-
-</html>
