--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,731 +1,226 @@
-	html, body
-	{
-		height: 100%;
-	}
-	
-	body
-	{
-		margin: 0px;
-		padding: 0px;
-		background: #f3d4a5;
-		font-family: 'Questrial', sans-serif;
-		font-size: 12pt;
-		color: #E5EEFF;
-	}
-	
-	
-	h1, h2, h3
-	{
-		margin: 0;
-		padding: 0;
-		color: #404040;
-	}
-	
-	p, ol, ul
-	{
-		margin-top: 0;
-	}
-	
-	ol, ul
-	{
-		padding: 0;
-		list-style: none;
-	}
-	
-	p
-	{
-		line-height: 180%;
-	}
-	
-	strong
-	{
-	}
-	
-	a
-	{
-		color: #16A085;
-	}
-	
-	a:hover
-	{
-		text-decoration: none;
-	}
-	
-
-	.container
-	{
-		margin: 0px auto;
-		width: 1200px;
-	}
-	
-
-/*********************************************************************************/
-/* Form Style                                                                    */
-/*********************************************************************************/
-
-		form
-		{
-		}
-		
-			form label
-			{
-				display: block;
-				text-align: left;
-				margin-bottom: 0.5em;
-			}
-			
-			form .submit
-			{
-				margin-top: 2em;
-				line-height: 1.5em;
-				font-size: 1.3em;
-			}
-		
-			form input.text,
-			form select,
-			form textarea
-			{
-				position: relative;
-				-webkit-appearance: none;
-				display: block;
-				border: 0;
-				background: #fff;
-				background: rgba(255,255,255,0.75);
-				width: 100%;
-				border-radius: 0.50em;
-				margin: 1em 0em;
-				padding: 1.50em 1em;
-				box-shadow: inset 0 0.1em 0.1em 0 rgba(0,0,0,0.05);
-				border: solid 1px rgba(0,0,0,0.15);
-				-moz-transition: all 0.35s ease-in-out;
-				-webkit-transition: all 0.35s ease-in-out;
-				-o-transition: all 0.35s ease-in-out;
-				-ms-transition: all 0.35s ease-in-out;
-				transition: all 0.35s ease-in-out;
-				font-size: 1em;
-				outline: none;
-			}
-
-				form input.text:hover,
-				form select:hover,
-				form textarea:hover
-				{
-				}
-
-				form input.text:focus,
-				form select:focus,
-				form textarea:focus
-				{
-					box-shadow: 0 0 2px 1px #E0E0E0;
-					background: #fff;
-				}
-				
-				form textarea
-				{
-					min-height: 12em;
-				}
-
-				form .formerize-placeholder
-				{
-					color: #555 !important;
-				}
-
-				form ::-webkit-input-placeholder
-				{
-					color: #555 !important;
-				}
-
-				form :-moz-placeholder
-				{
-					color: #555 !important;
-				}
-
-				form ::-moz-placeholder
-				{
-					color: #555 !important;
-				}
-
-				form :-ms-input-placeholder
-				{
-					color: #555 !important;
-				}
-
-				form ::-moz-focus-inner
-				{
-					border: 0;
-				}
-
-
-/*********************************************************************************/
-/* Image Style                                                                   */
-/*********************************************************************************/
-
-	.image
-	{
-		display: inline-block;
-		border: 1px solid rgba(0,0,0,.1);
-	}
-	
-	.image img
-	{
-		display: block;
-		width: 100%;
-	}
-	
-	.image-full
-	{
-		display: block;
-		width: 100%;
-		margin: 0 0 3em 0;
-	}
-	
-	.image-left
-	{
-		float: left;
-		margin: 0 2em 2em 0;
-	}
-	
-	.image-centered
-	{
-		display: block;
-		margin: 0 0 2em 0;
-	}
-	
-	.image-centered img
-	{
-		margin: 0 auto;
-		width: auto;
-	}
-
-/*********************************************************************************/
-/* List Styles                                                                   */
-/*********************************************************************************/
-
-	ul.style1
-	{
-	}
-
-
-/*********************************************************************************/
-/* Social Icon Styles                                                            */
-/*********************************************************************************/
-
-	ul.contact
-	{
-		margin: 0;
-		padding: 2em 0em 0em 0em;
-		list-style: none;
-	}
-	
-	ul.contact li
-	{
-		display: inline-block;
-		padding: 0em 0.10em;
-		font-size: 1em;
-	}
-	
-	ul.contact li span
-	{
-		display: none;
-		margin: 0;
-		padding: 0;
-	}
-	
-	ul.contact li a
-	{
-		color: #FFF;
-	}
-	
-	ul.contact li a:before
-	{
-		display: inline-block;
-		background: rgb(139, 228, 23);
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		text-align: center;
-		color: rgba(255,255,255,.5);
-	}
-	
-
-/*********************************************************************************/
-/* Button Style                                                                  */
-/*********************************************************************************/
-
-	.button
-	{
-		display: inline-block;
-		margin-top: 2em;
-		padding: 0.8em 2em;
-		background: #3E5A99;
-		line-height: 1.8em;
-		letter-spacing: 1px;
-		text-decoration: none;
-		font-size: 1em;
-		color: #FFF;
-	}
-	
-	.button:before
-	{
-		display: inline-block;
-		background: #8DCB89;
-		margin-right: 1em;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		border-radius: 20px;
-		text-align: center;
-		color: #272925;
-	}
-	
-	.button-small
-	{
-	}
-		
-/*********************************************************************************/
-/* Heading Titles                                                                */
-/*********************************************************************************/
-
-	.title
-	{
-		margin-bottom: 3em;
-	}
-	
-	.title h2
-	{
-		font-size: 2.8em;
-		color: #FFF;
-	}
-	
-	.title .byline
-	{
-		font-size: 1.1em;
-		color: rgba(255,255,255,.5);
-	}
-
-/*********************************************************************************/
-/* Header                                                                        */
-/*********************************************************************************/
-
-	#header-wrapper
-	{
-		overflow: hidden;
-		padding: 6em 0em 2em 0em;
-	}
-
-	#header
-	{
-		text-align: center;
-	}
-
-/*********************************************************************************/
-/* Logo                                                                          */
-/*********************************************************************************/
-
-	#logo
-	{
-	}
-	
-	#logo h1
-	{
-		display: inline-block;
-		margin-bottom: 0.20em;
-		padding: 0.20em 0.9em;
-		font-size: 3.5em;
-	}
-	
-	#logo a
-	{
-		text-decoration: none;
-		color: #FFF;
-	}
-	
-	#logo span
-	{
-		padding-right: 0.5em;
-		text-transform: uppercase;
-		font-size: 0.90em;
-		color: rgba(255,255,255,1);
-	}
-
-	#logo span a
-	{
-		color: rgba(255,255,255,0.8);
-	}
-	
-	
-
-/*********************************************************************************/
-/* Menu                                                                          */
-/*********************************************************************************/
-
-	#menu
-	{
-	}
-	
-	#menu ul
-	{
-		display: inline-block;
-		padding: 0em 2em;
-		text-align: center;
-	}
-	
-	#menu li
-	{
-		display: inline-block;
-	}
-	
-	#menu li a, #menu li span
-	{
-		display: inline-block;
-		padding: 1.3em 1.5em;
-		text-decoration: none;
-		font-size: 0.90em;
-		font-weight: 600;
-		text-transform: uppercase;
-		outline: 0;
-		color: #FFF;
-	}
-	
-	#menu li:hover a, #menu li.active a, #menu li.active span
-	{
-		background: rgb(252, 253, 163);
-	}
-	
-	#menu .current_page_item a
-	{
-		color: #FFF;
-	}
-	
-
-/*********************************************************************************/
-/* Banner                                                                        */
-/*********************************************************************************/
-
-	#banner
-	{
-	}
-
-/*********************************************************************************/
-/* Wrapper                                                                       */
-/*********************************************************************************/
-
-
-	.wrapper
-	{
-		overflow: hidden;
-		padding: 0em 0em 5em 0em;
-	}
-
-	#wrapper1
-	{
-		background: #FFF;
-	}
-
-	#wrapper2
-	{
-		overflow: hidden;
-		padding: 5em 0em;
-		text-align: center;
-	}
-
-	#wrapper3
-	{
-	}
-	
-	#wrapper4
-	{
-	}
-
-/*********************************************************************************/
-/* Welcome                                                                       */
-/*********************************************************************************/
-
-	#welcome
-	{
-		overflow: hidden;
-		width: 1200px;
-		padding: 2em 0px 0em 0px;
-		text-align: center;
-	}
-	
-	#welcome .content
-	{
-		padding: 0em 8em;
-	}
-	
-		#welcome .image
-		{
-			display: block;
-			padding-top: 3em;
-			border: none;
-		}
-
-	#welcome .title h2
-	{
-		color: #FFF;
-	}
-	
-	#welcome a,
-	#welcome strong
-	{
-		color: #C6C2C4;
-	}
-
-/*********************************************************************************/
-/* Page                                                                          */
-/*********************************************************************************/
-
-	#page-wrapper
-	{
-		overflow: hidden;
-		padding: 3em 0em 0em 0em;
-		text-align: center;
-	}
-
-	#page
-	{
-	}
-
-/*********************************************************************************/
-/* Content                                                                       */
-/*********************************************************************************/
-
-	#content
-	{
-		float: left;
-		width: 700px;
-		padding-right: 100px;
-		border-right: 1px solid rgba(0,0,0,.1);
-	}
-
-/*********************************************************************************/
-/* Sidebar                                                                       */
-/*********************************************************************************/
-
-	#sidebar
-	{
-		float: right;
-		width: 350px;
-	}
-
-/*********************************************************************************/
-/* Footer                                                                        */
-/*********************************************************************************/
-
-	#footer
-	{
-		text-align: center;
-	}
-
-	
-	#footer .title span
-	{
-		color: rgba(255,255,255,0.4);
-	}
-
-/*********************************************************************************/
-/* Copyright                                                                     */
-/*********************************************************************************/
-
-	#copyright
-	{
-		overflow: hidden;
-		padding: 5em 0em;
-		border-top: 1px solid rgba(255,255,255,0.08);
-		text-align: center;
-	}
-	
-	#copyright p
-	{
-		letter-spacing: 1px;
-		font-size: 0.90em;
-		color: rgba(255,255,255,0.6);
-	}
-	
-	#copyright a
-	{
-		text-decoration: none;
-		color: rgba(255,255,255,0.8);
-	}
-
-/*********************************************************************************/
-/* Newsletter                                                                    */
-/*********************************************************************************/
-
-	#newsletter
-	{
-		overflow: hidden;
-		padding: 8em 0em;
-		background: #EDEDED;
-		text-align: center;
-	}
-	
-	#newsletter .title h2
-	{
-		color: rgba(0,0,0,0.8);
-	}
-	
-	#newsletter .content
-	{
-		width: 600px;
-		margin: 0px auto;
-	}
-	
-/*********************************************************************************/
-/* Portfolio                                                                     */
-/*********************************************************************************/
-
-	#portfolio
-	{
-	}
-	
-	#portfolio .box
-	{
-		text-align: center;
-	}
-	
-	#portfolio h3
-	{
-		display: block;
-		padding-bottom: 1em;
-		font-size: 1em;
-		color: rgba(255,255,255,1);
-	}
-
-	#portfolio .title
-	{
-		text-align: center;
-	}
-
-	#portfolio .title h2
-	{
-		color: rgba(0,0,0,0.8);
-	}
-
-	.column1,
-	.column2,
-	.column3,
-	.column4
-	{
-		width: 282px;
-	}
-	
-	.column1,
-	.column2,
-	.column3
-	{
-		float: left;
-		margin-right: 24px;
-	}
-	
-	.column4
-	{
-		float: right;
-	}
-
-/*********************************************************************************/
-/* Three Columns                                                                 */
-/*********************************************************************************/
-
-	#three-column
-	{
-		overflow: hidden;
-		text-align: center;
-	}
-	
-	#three-column h2
-	{
-		margin: 1em 0em;
-		font-size: 1.5em;
-		font-weight: 700;
-	}
-	
-	#three-column .icon
-	{
-		position: relative;
-		display: block;
-		margin: 0px auto 0.80em auto;
-		background: none;
-		line-height: 150px;
-		font-size: 4em;
-		width: 150px;
-		height: 150px;
-		border-radius: 100px;
-		border: 6px solid #67128F;
-		text-align: center;
-		color: #FFF;
-		
-	}
-		
-	#three-column #tbox1,
-	#three-column #tbox2,
-	#three-column #tbox3
-	{
-		float: left;
-		width: 320px;
-		padding: 80px 40px 80px 40px;
-	}
-	
-	#three-column .title
-	{
-		text-align: center;
-	}
-	
-	#three-column .title h2
-	{
-		font-size: 1.60em;
-	}
-	
-	#three-column .title .byline
-	{
-		padding-top: 0.50em;
-		font-size: 0.90em;
-		color: #858585;
-	}
-
-	#three-column .arrow-down
-	{
-		border-top-color: #292929;
-	}
-	
-	
-	ul.tools
-	{
-		margin: 0;
-		padding: 0em 0em 0em 0em;
-		list-style: none;
-	}
-	
-	ul.tools li
-	{
-		display: inline-block;
-		padding: 0em .2em;
-		font-size: 4em;
-	}
-	
-	ul.tools li span
-	{
-		display: none;
-		margin: 0;
-		padding: 0;
-	}
-	
-	ul.tools li a
-	{
-		color: #FFF;
-	}
-	
-	ul.tools li a:before
-	{
-		display: inline-block;
-		background: #1ABC9C;
-		width: 120px;
-		height: 120px;
-		border-radius: 50%;
-		line-height: 120px;
-		text-align: center;
-		color: #FFFFFF;
-	}
-	
-	
+.bd-placeholder-img {
+	font-size: 1.125rem;
+	text-anchor: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+  }
+  @media (min-width: 768px) {
+	.bd-placeholder-img-lg {
+	  font-size: 3.5rem;
+	}
+  }
+  body {
+	background-color: #ffffff;
+  }::-webkit-scrollbar{width: 16px;}::-webkit-scrollbar-track{background-color: #7F888F;}::-webkit-scrollbar-thumb{background-color: #f56a6a;border-radius: 5px;}
+  @font-face {
+	font-family:'Nanum Pen Script';
+	font-weight: 400;
+	src: url('/static/font/NanumPen.ttf');
+  }
+  @font-face {
+	font-family: 'Cookie';
+	src: url('/static/font/CookieRun Regular.ttf')
+  }
+  .inner {
+	padding: 0 6em 0.1em 6em;
+	margin: 0 auto;
+	max-width: 110em;
+  }
+  #header {
+	border-bottom: solid 5px #f56a6a;
+	position: relative;
+  }
+  #header .logo {
+	border-bottom: 0;
+	color: inherit;
+	font-family: "Roboto Slab", serif;
+	font-size: 1.125em;
+  }
+  .btn-default {
+	color: #fff;
+	background-color: #fff;
+	border-color: #ffffff
+  }
+  .btn-default:hover {
+	color: #fff;
+	background-color: #ffffff;
+	border-color: #f56a6a
+  }
+  .btn-default.focus,
+  .btn-default:focus {
+	box-shadow: 0 0 0 .2rem #f56a6a
+  }
+  .btn-default.disabled,
+  .btn-default:disabled {
+	color: #fff;
+	background-color: #f56a6a;
+	border-color: #f56a6a
+  }
+  .btn-default:not(:disabled):not(.disabled).active,
+  .btn-default:not(:disabled):not(.disabled):active,
+  .show>.btn-default.dropdown-toggle {
+	color: #fff;
+	background-color: #f56a6a;
+	border-color: #f56a6a
+  }
+  .btn-default:not(:disabled):not(.disabled).active:focus,
+  .btn-default:not(:disabled):not(.disabled):active:focus,
+  .show>.btn-default.dropdown-toggle:focus {
+	box-shadow: 0 0 0 .2rem #f56a6a
+  }
+  .btn-input {
+	color: #fff;
+	background-color: #fff;
+	border-color: #ffffff
+  }
+  .btn-input:hover {
+	color: #fff;
+	background-color: #ffffff;
+	border-color: #f56a6a
+  }
+  .btn-input.focus,
+  .btn-input:focus {
+	box-shadow: 0 0 0 .2rem #f56a6a
+  }
+  .btn-input.disabled,
+  .btn-input:disabled {
+	color: #fff;
+	background-color: #f56a6a;
+	border-color: #f56a6a
+  }
+  .btn-input:not(:disabled):not(.disabled).active,
+  .btn-input:not(:disabled):not(.disabled):active,
+  .show>.btn-input.dropdown-toggle {
+	color: #fff;
+	background-color: #f56a6a;
+	border-color: #f56a6a
+  }
+  .btn-input:not(:disabled):not(.disabled).active:focus,
+  .btn-input:not(:disabled):not(.disabled):active:focus,
+  .show>.btn-input.dropdown-toggle:focus {
+	box-shadow: 0 0 0 .2rem #f56a6a
+  }
+  .btn-white {
+	color: #fff;
+	background-color: #fff;
+	border-color: #ffffff
+  }
+  .btn-white:hover {
+	color: #fff;
+	background-color: #ffffff;
+	border-color: #ffffff
+  }
+  .btn-white.focus,
+  .btn-white:focus {
+	box-shadow: 0 0 0 .2rem #ffffff
+  }
+  .btn-white.disabled,
+  .btn-white:disabled {
+	color: #fff;
+	background-color: #ffffff;
+	border-color: #ffffff
+  }
+  .btn-white:not(:disabled):not(.disabled).active,
+  .btn-white:not(:disabled):not(.disabled):active,
+  .show>.btn-white.dropdown-toggle {
+	color: #fff;
+	background-color: #ffffff;
+	border-color: #ffffff
+  }
+  .btn-white:not(:disabled):not(.disabled).active:focus,
+  .btn-white:not(:disabled):not(.disabled):active:focus,
+  .show>.btn-white.dropdown-toggle:focus {
+	box-shadow: 0 0 0 .2rem #ffffff
+  }
+  .underline {
+	color: #7F888F
+  }
+  .underline:hover {
+	text-decoration: underline;
+	text-underline-position: top,under;
+	font-weight: bold;
+	color: #f56a6a;
+  }
+  .mytable {
+	border-collapse: collapse;
+  }
+  .mytable table,
+  .mytable th,
+  .mytable tr,
+  .mytable td {
+	border: 2px solid #f56a6a;
+  }
+  select {
+	background: url('/static/icon/down-arrow.png') no-repeat 95% 50%;
+	width: 300px;
+	padding: .8em .5em;
+	border: 2px solid #f56a6a;
+	font-family: comic sans ms;
+	border-radius: 0px;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+  }
+  .checks {
+	position: relative;
+  }
+  .agree .all_agree input[type="checkbox"] {
+	display: none;
+  }
+  .agree .all_agree input[type="checkbox"]+label {
+	display: inline-block;
+	position: relative;
+	cursor: pointer;
+	border-radius: 6px;
+	margin-right:20px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+  }
+  .agree .all_agree input[type="checkbox"]:checked+label span{
+	background: url('/static/icon/checked.png') no-repeat center;
+	width:32px;
+	height: 32px;
+  }
+  .agree .all_agree input[type="checkbox"] + label span {
+	position: absolute;
+	background: url('/static/icon/cancel.png') no-repeat center;
+	top: 5px;
+	left: 150px;
+	width:32px;height: 32px;
+	display: url('/static/icon/cancel.png');
+  }
+  .checks input[type="checkbox"]+label:active:before,
+  .checks input[type="checkbox"]:checked+label:active:before {
+	box-shadow: 0 1px 2px #000000, inset 0px 1px 3px #000000;
+  }
+  .chkall input[type="checkbox"] {
+	display: none;
+  }
+  .chkall input[type="checkbox"]+label {
+	display: inline-block;
+	position: relative;
+	cursor: pointer;
+	border-radius: 6px;
+	margin-right:20px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+  }
+  .chkall input[type="checkbox"]:checked+label span{
+	background: url('/static/icon/checked.png') no-repeat center;
+	width:32px;
+	height: 32px;
+  }
+  .chkall input[type="checkbox"] + label span {
+	position: absolute;
+	background: url('/static/icon/cancel.png') no-repeat center;
+	top: 0px;
+	left: 100px;
+	width:32px;height: 32px;
+	display: url('/static/icon/cancel.png');
+  }
