--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% extends 'rest/base.html' %}
-
 {% block content %}
 <div class='container'>
         <table style='width:100%;'>
@@ -11,82 +10,87 @@
 
 
                         <table class='mytable' width="100%" height="350" align="center" style='margin-top:50px'>
-                        <tr style="margin-left:10px;font-family: 'Cookie'; font-size: x-large; color:#3D4449;"
+                                <tr style="margin-left:10px;font-family: 'Cookie'; font-size: x-large; color:#3D4449;"
                                         align="center">
-                                <td width=" 8%">이미지</td>
-                                <td width="23%">식당명</td>
-                                <td width="23%">주소</td>
-                                <td width="8%">카테고리</td>
-                                <td width="8%">거리</td>
-                        </tr>
-                        {% for data in asc_data %}
-                        <tr height="150" align='center'style="margin-left:10px; font-family:'Nanum Pen Script'; font-size: x-large; color:#7F888F;">
-                        <td><a  href="detail?idno={{data.5}}" ><img src="data:;base64,{{data.4}}"
-                                                width='150px' height='150px' /></a></td>
-                        <td><a class='underline' style=" font-family:'Nanum Pen Script'; font-size: xx-large;" href="detail?idno={{data.5}}">
-                                       {{data.0}}
-                                </a></td>
-                        <td >{{data.1}}</td>
-                        <td >{{data.2}}</td>
-                        <td >{{data.3}}m</td>
+                                        <td width=" 8%">이미지</td>
+                                        <td width="23%">식당명</td>
+                                        <td width="23%">주소</td>
+                                        <td width="8%">카테고리</td>
+                                        <td width="8%">거리</td>
+                                </tr>
+                                {% for data in asc_data %}
+                                <tr height="150" align='center'
+                                        style="margin-left:10px; font-family:'Nanum Pen Script'; font-size: x-large; color:#7F888F;">
+                                        <td><a href="detail?idno={{data.5}}"><img src="data:;base64,{{data.4}}"
+                                                                width='150px' height='150px' /></a></td>
+                                        <td><a class='underline'
+                                                        style=" font-family:'Nanum Pen Script'; font-size: xx-large;"
+                                                        href="detail?idno={{data.5}}">
+                                                        {{data.0}}
+                                                </a></td>
+                                        <td>{{data.1}}</td>
+                                        <td>{{data.2}}</td>
+                                        <td>{{data.3}}m</td>
 
-                </tr>
-                {% endfor %}
-
-
-
-
-        </table>
-        <div style='display: inline-block;margin-top: 20px;'>
-                {% if leng != 0 %}
-                <ul class="pagination" style="border:#f56a6a">
-                        <li class="page-item">
-                                {% if no != 1 %}
-                                <a class="page-link"
-                                        href="?no={{subno}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}"
-                                        aria-label="Previous" style="color: #7F888F;">
-                                        <span aria-hidden="true">&laquo;</span>
-                                </a>
-                                {% endif %}
-                        </li>
-                        <ul class="pagination">
-
-                                {% for i in ran10 %}
-
-                                {% if no == i %}
-                                <li class="page-item active" aria-current="page" style="background-color: #f56a6a;"><span class="page-link">{{i}}<span
-                                                        class="sr-only" ></span></span></li>
-                                {% else %}
-                                
-                                <li class="page-item"><a class="page-link" style="color: #3D4449;"
-                                                href="?no={{i}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}">{{i}}</a>
-                                </li>
-
-                                {% endif %}
-
-
-
-
+                                </tr>
                                 {% endfor %}
-                        </ul>
-
-                        <li class="page-item">
-                                {% if no != leng %}
-                                <a class="page-link" style="color: #7F888F;"
-                                        href="?no={{addno}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}"
-                                        aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
 
 
-                                </a>
+
+
+                        </table>
+                        <div style='display: inline-block;margin-top: 20px;'>
+                                {% if leng != 0 %}
+                                <ul class="pagination" style="border:#f56a6a">
+                                        <li class="page-item">
+                                                {% if no != 1 %}
+                                                <a class="page-link"
+                                                        href="?no={{subno}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}"
+                                                        aria-label="Previous" style="color: #7F888F;">
+                                                        <span aria-hidden="true">&laquo;</span>
+                                                </a>
+                                                {% endif %}
+                                        </li>
+                                        <ul class="pagination">
+
+                                                {% for i in ran10 %}
+
+                                                {% if no == i %}
+                                                <li class="page-item active" aria-current="page"
+                                                        style="background-color: #f56a6a;"><span
+                                                                class="page-link">{{i}}<span
+                                                                        class="sr-only"></span></span></li>
+                                                {% else %}
+
+                                                <li class="page-item"><a class="page-link" style="color: #3D4449;"
+                                                                href="?no={{i}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}">{{i}}</a>
+                                                </li>
+
+                                                {% endif %}
+
+
+
+
+                                                {% endfor %}
+                                        </ul>
+
+                                        <li class="page-item">
+                                                {% if no != leng %}
+                                                <a class="page-link" style="color: #7F888F;"
+                                                        href="?no={{addno}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}"
+                                                        aria-label="Next">
+                                                        <span aria-hidden="true">&raquo;</span>
+
+
+                                                </a>
+                                                {% endif %}
+                                        </li>
+                                </ul>
                                 {% endif %}
-                        </li>
-                </ul>
-                {% endif %}
-        </div>
-        </td>
+                        </div>
+                </td>
 
-        </td>
+
 
         </table>
 
