--- a/templates/rest/edit.html
+++ b/templates/rest/edit.html
@@ -1,113 +1,138 @@
 <!DOCTYPE html>
 {% extends 'rest/base.html' %}
-
 {% block content %}
-<html lang="en">
 <form action='edit' method='POST'>
-<body>
     <div class='container' align='center'>
-        <button type='submit' class='btn btn-default'style='margin-top:20px;font-size:xxx-large;color:#7F888F;'>수정완료</button>
+        <button type='submit' class='btn btn-default'
+            style='margin-top:20px;font-size:xxx-large;color:#7F888F;'>수정완료</button>
         <table class='table' style='border:0px solid rgb(0,0,0,0);'>
             <tr style='border:0px solid rgb(0,0,0,0);'>
-            <td colspan="2" style="font-size: xxx-large;font-family: cookie;"><img src="data:;base64,{{image}}" width="370px" height="370px"><strong>수정페이지</strong></td><br/>
-            
-            <td style="width: 70%;">
-            
-                <table class='table mytable' >
+                <td colspan="2" style="font-size: xxx-large;font-family: cookie;"><img src="data:;base64,{{image}}"
+                        width="370px" height="370px"><strong>수정페이지</strong></td><br />
 
-                    <tr align="center">
-                        <td>
-                            <a>
-                                <font size="7" face='Cookie' color="#3D4449">
-                                    {{data.2}}  
-                                </font>
-                                <input type='hidden' name='idno' value={{idno}}   />
-                            </a>
+                <td style="width: 70%;">
 
+                    <table class='table mytable'>
 
-                            <a>
-                                
-                                <input type='text' name='cate' style="width:15%;color:#3D4449;font-family: Nanum Pen Script;font-size:x-large" class='form-control' value={{data.4}} required />
-
-                    
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-                <table class='table mytable' style="margin-top: -18px;">
-                    <tr align='center'>
-                        <td style='width:20%'><a href='https://map.kakao.com/?itemId={{data.0}}' target="_blank"><img type='image/png'
-                                    width="60" height="60" src='/static/icon/map.png' /></a><br /><br />
-                            <a href='https://map.kakao.com/?itemId={{data.0}}' face='Nanum Pen Script'
-                                class="btn btn-outline-success" target="_blank">지도보기</button></td>
-                        <td style='width:20%'><a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}'
-                                target="_blank"> <img type='image/png' width="60" height="60"
-                                    src='/static/icon/route.png' /></a><br /><br />
-                            <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}'
-                                face='Nanum Pen Script' class="btn btn-outline-primary" target="_blank">길찾기</a></td>
-                        <td style='width:20%'><a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
-                                target="_blank"><img type='image/png' width="60" height="60"
-                                    src='/static/icon/street-view.png' /></a><br /><br />
-                            <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
-                                face='Nanum Pen Script' class="btn btn-outline-danger" target="_blank">로드뷰</a></td>
-                                
-
-                    </tr>
+                        <tr align="center">
+                            <td>
+                                <a>
+                                    <font size="7" face='Cookie' color="#3D4449">
+                                        {{data.2}}
+                                    </font>
+                                    <input type='hidden' name='idno' value={{idno}} />
+                                </a>
 
 
-                </table>
-                <table class='table mytable' style="margin-top: -18px;">
-                    <tr>
-                        <td>
-                            <details>
-                                <summary style="width: 100%;resize:none;font-size:x-large;font-family: Cookie;color:#3D4449">정보</summary>
-                                <p style="font-family: Nanum Pen Script;color:#7F888F">
-                                    <a style="font-size:x-large;"><strong>영업시간</strong></a><br/>
-                                    <a style="font-size:large;">{% if data.7 == None %}
-                                       <input type='text' name='week' style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large" class='form-control' value='' placeholder='등록된 영업시간 정보가 없습니다.'/>
-                                    
-                                    {% else %}
-                                    <input type='text' name='week' style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large" class='form-control' value ='{{data.7}}' required />
-                                    {% endif %}</a><br/><br/>
-                                    <a style="font-size:x-large;"><strong>주소</strong></a><br/>
-                                    <a style="font-size:large;">{% if data.1 == None %}
-                                    <input type='text' name='addr' style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large" class='form-control' value='' placeholder='등록된 주소가 없습니다.'  />
-                                    {% else %}                    
-                                    <input type='text' name='addr' style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large" class='form-control' value='{{data.1}}' required />
-                                    {% endif %} </a><br/><br/>                 
-                                    <a style="font-size:x-large;"><strong>전화번호</strong></a><br/>
-                                    <a style="font-size:large;">{% if data.3 == None %}
-                                        <input type='text' name='phone' style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large" class='form-control'value='' placeholder='등록된 번호가 없습니다.'  />
-                                    {% else %}
-                                    <input type='text' name='phone' style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large" class='form-control' value='{{data.3}}' required />
-                                    {% endif %}</a></p>
-                            </details>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <details>
-                                <summary style="width: 100%;resize:none;font-size:x-large;font-family: Cookie;color:#3D4449">메뉴</summary>
-                                <p>{% if menu == '' %}
-                                    <textarea placeholder='등록된 메뉴 정보가 없습니다.' rows=15 name='menu' style="width:100%;resize:none;font-size:large;font-family: Nanum Pen Script;color:#3D4449"  class='form-control'></textarea>
-                                    {% else %}
-                                    <textarea rows=15 name='menu' style="width:100%;resize:none;font-size:large;font-family: Nanum Pen Script;color:#3D4449" class='form-control' required>{{menu}}</textarea>
-                                    {% endif %}
-                                    <br/>
+                                <a>
+
+                                    <input type='text' name='cate'
+                                        style="width:15%;color:#3D4449;font-family: Nanum Pen Script;font-size:x-large"
+                                        class='form-control' value={{data.4}} required />
+
+
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                    <table class='table mytable' style="margin-top: -18px;">
+                        <tr align='center'>
+                            <td style='width:20%'><a href='https://map.kakao.com/?itemId={{data.0}}'
+                                    target="_blank"><img type='image/png' width="60" height="60"
+                                        src='/static/icon/map.png' /></a><br /><br />
+                                <a href='https://map.kakao.com/?itemId={{data.0}}' face='Nanum Pen Script'
+                                    class="btn btn-outline-success" target="_blank">지도보기</button></td>
+                            <td style='width:20%'><a
+                                    href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}'
+                                    target="_blank"> <img type='image/png' width="60" height="60"
+                                        src='/static/icon/route.png' /></a><br /><br />
+                                <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}'
+                                    face='Nanum Pen Script' class="btn btn-outline-primary" target="_blank">길찾기</a></td>
+                            <td style='width:20%'><a
+                                    href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
+                                    target="_blank"><img type='image/png' width="60" height="60"
+                                        src='/static/icon/street-view.png' /></a><br /><br />
+                                <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
+                                    face='Nanum Pen Script' class="btn btn-outline-danger" target="_blank">로드뷰</a></td>
+
+
+                        </tr>
+
+
+                    </table>
+                    <table class='table mytable' style="margin-top: -18px;">
+                        <tr>
+                            <td>
+                                <details>
+                                    <summary
+                                        style="width: 100%;resize:none;font-size:x-large;font-family: Cookie;color:#3D4449">
+                                        정보</summary>
+                                    <p style="font-family: Nanum Pen Script;color:#7F888F">
+                                        <a style="font-size:x-large;"><strong>영업시간</strong></a><br />
+                                        <a style="font-size:large;">{% if data.7 == None %}
+                                            <input type='text' name='week'
+                                                style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large"
+                                                class='form-control' value='' placeholder='등록된 영업시간 정보가 없습니다.' />
+
+                                            {% else %}
+                                            <input type='text' name='week'
+                                                style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large"
+                                                class='form-control' value='{{data.7}}' required />
+                                            {% endif %}</a><br /><br />
+                                        <a style="font-size:x-large;"><strong>주소</strong></a><br />
+                                        <a style="font-size:large;">{% if data.1 == None %}
+                                            <input type='text' name='addr'
+                                                style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large"
+                                                class='form-control' value='' placeholder='등록된 주소가 없습니다.' />
+                                            {% else %}
+                                            <input type='text' name='addr'
+                                                style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large"
+                                                class='form-control' value='{{data.1}}' required />
+                                            {% endif %} </a><br /><br />
+                                        <a style="font-size:x-large;"><strong>전화번호</strong></a><br />
+                                        <a style="font-size:large;">{% if data.3 == None %}
+                                            <input type='text' name='phone'
+                                                style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large"
+                                                class='form-control' value='' placeholder='등록된 번호가 없습니다.' />
+                                            {% else %}
+                                            <input type='text' name='phone'
+                                                style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large"
+                                                class='form-control' value='{{data.3}}' required />
+                                            {% endif %}</a></p>
+                                </details>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <details>
+                                    <summary
+                                        style="width: 100%;resize:none;font-size:x-large;font-family: Cookie;color:#3D4449">
+                                        메뉴</summary>
+                                    <p>{% if menu == '' %}
+                                        <textarea placeholder='등록된 메뉴 정보가 없습니다.' rows=15 name='menu'
+                                            style="width:100%;resize:none;font-size:large;font-family: Nanum Pen Script;color:#3D4449"
+                                            class='form-control'></textarea>
+                                        {% else %}
+                                        <textarea rows=15 name='menu'
+                                            style="width:100%;resize:none;font-size:large;font-family: Nanum Pen Script;color:#3D4449"
+                                            class='form-control' required>{{menu}}</textarea>
+                                        {% endif %}
+                                        <br />
                                     </p>
-                            </details>
-                        </td>
-                    </tr>
-                    
-                    
-                    
-                    
-                </table>
-            </td>
-        </tr>
-</body>
+                                </details>
+                            </td>
+                        </tr>
+
+
+
+
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </div>
 </form>
-</div>
+</body>
 
 
 
