--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -1,66 +1,53 @@
 <!doctype html>
 {% extends 'rest/base.html' %}
 {% block content %}
-
-<body>
-
+<div class='container'>
   <table style='width:100%;'>
-
-    </td>
     <td>
       <div class="text-center">
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
           <header class="masthead mb-auto">
-
             <div id="logo">
               <font size='10' color="#3D4449" face='comic sans ms'>R . I . P</font>
               <div style="margin-top: 10px;"></div>
               <font size='7' color="#3D4449" face='comic sans ms'>Restaurant In Program</font>
-              <div style='margin-top:30px'></div>
-
-              <div id="menu" >
-                <ul >
-                  <button class='btn btn-default' style="width: 150px;"><a href="index"style='text-decoration:none;'>
+              <div id="menu" style='margin-top:30px'>
+                <ul>
+                  <button class='btn btn-default' style="width: 150px;"><a href="index" style='text-decoration:none;'>
                       <font size='3' color="#7F888F" face='Cookie'><strong>R I P 만의 기능</strong></font>
                     </a></button>
-                  <button class='btn btn-default'style="width: 150px;"><a style='text-decoration:none'
+                  <button class='btn btn-default' style="width: 150px;"><a style='text-decoration:none'
                       href="board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000">
                       <font size='3' color="#7F888F" face='Cookie'><strong>부대 모든 음식점</strong></font>
                     </a></button>
-                  <button class='btn btn-default'style="width: 150px;"><a href="search" style='text-decoration:none'>
+                  <button class='btn btn-default' style="width: 150px;"><a href="search" style='text-decoration:none'>
                       <font size='3' color="#7F888F" face='Cookie'><strong>필터검색</strong></font>
                     </a></button>
                 </ul>
               </div>
             </div>
-
-
           </header>
-
-
           <p class="lead">
             <div class='container' width='600px' style='margin-top:20px'>
-
-
-
-              <img src="/static/icon/menu1.png" width="370px" height="370px" >
+              <img src="/static/icon/menu1.png" width="370px" height="370px">
               <div style="margin-top: 30px;"></div>
-              <font size='5'face='Nanum Pen Script' class="cover-heading" style='margin-top:30px; color:#7F888F'>Welcome to R I P
+              <font size='5' face='Nanum Pen Script' class="cover-heading" style='margin-top:30px; color:#7F888F'>
+                Welcome
+                to R I P
               </font>
               <p class="lead" style="color: #3D4449; font-family: Nanum Pen Script;font-size:xx-large;">
-                <img src="\static\icon\onigiri.png" width="60px" height="60px">&nbsp;&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄 사이트입니다! &nbsp;&nbsp;
+                <img src="\static\icon\onigiri.png" width="60px" height="60px">&nbsp;&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄
+                사이트입니다! &nbsp;&nbsp;
                 <img src="\static\icon\onigiri.png" width="60px" height="60px">
               </p>
             </div>
-
-
           </p>
-          </main>
         </div>
+      </div>
     </td>
 
   </table>
+</div>
 
-  </div>
 </body>
 {% endblock %}
