--- a/templates/rest/login.html
+++ b/templates/rest/login.html
@@ -2,15 +2,16 @@
 {% extends 'rest/base.html' %}
 {% block content %}
 <div class='container' align='center'>
-<div class="wrap-login100 p-t-30 p-b-50">
-    <span class="login100-form-title p-b-41" style="margin-left:10px;font-family: 'Comic Sans MS'; font-size: xx-large; color:#3D4449;">
-        Administrator Login
-    </span>
-    <!-- <form class="login100-form validate-form p-b-33 p-t-5" action='login' method='POST'> -->
+    <div class="wrap-login100 p-t-30 p-b-50">
+        <span class="login100-form-title p-b-41"
+            style="margin-left:10px;font-family: 'Comic Sans MS'; font-size: xx-large; color:#3D4449;">
+            Administrator Login
+        </span>
+
 
         <div class="wrap-input100 validate-input" data-validate="Enter password">
-            <input class="input100" type="password" id='pass'name="pass" placeholder="Password">
-            <span class="focus-input100" ></span>
+            <input class="input100" type="password" id='pass' name="pass" placeholder="Password">
+            <span class="focus-input100"></span>
         </div>
 
         <div class="container-login100-form-btn m-t-32">
@@ -19,45 +20,43 @@
             </button>
         </div>
 
-    <!-- </form> -->
-</div>
+
+    </div>
 </div>
 <script>
+    $('#logbtn').click(function () {
 
-    
-        $('#logbtn').click(function(){
+        var pass = $('#pass').val()
+        jQuery.ajax({
 
-            var pass = $('#pass').val()
-         jQuery.ajax({
-    
-               type:"POST",
-    
-               url:"/rest/login",
-    
-               dataType:"JSON", // 옵션이므로 JSON으로 받을게 아니면 안써도 됨
-                data: {'pass':pass},
-               success : function(data) {
-    
-                     // 통신이 성공적으로 이루어졌을 때 이 함수를 타게 된다.
-                     alert('로그인에 성공하였습니다.');
-                     // TODO
-                    location.href='/rest/home'
-               },
-    
-               error : function(xhr, status, error) {
-    
-                     alert('비밀번호가 틀렸습니다.');
-    
-               }
-    
-         });
-    
+            type: "POST",
+
+            url: "/rest/login",
+
+            dataType: "JSON", // 옵션이므로 JSON으로 받을게 아니면 안써도 됨
+            data: { 'pass': pass },
+            success: function (data) {
+
+                // 통신이 성공적으로 이루어졌을 때 이 함수를 타게 된다.
+                alert('로그인에 성공하였습니다.');
+                // TODO
+                location.href = '/rest/home'
+            },
+
+            error: function (xhr, status, error) {
+
+                alert('비밀번호가 틀렸습니다.');
+
+            }
+
+        });
+
     });
-    
-    </script>
-    
-    
-    
+
+</script>
+
+
+
 
 
 
